# toon_rust

./: AGENTS.md  Cargo.toml  EXISTING_TOON_RUST_STRUCTURE.md  FEATURE_PARITY.md  INTEGRATION_GUIDE.md  PLAN_TO_PORT_TOON_RUST_TO_RUST.md  PROPOSED_ARCHITECTURE.md  README.md  UPGRADE_LOG.md  install.sh  storage.sqlite3-shm  storage.sqlite3-wal
.beads/: issues.jsonl
.github/workflows/: notify-acfs.yml  release.yml
src/: error.rs  lib.rs  options.rs
src/cli/: args.rs  conversion.rs  json_stringify.rs  mod.rs
src/decode/: async_decode.rs  decoders.rs  event_builder.rs  expand.rs  mod.rs  parser.rs  scanner.rs  validation.rs
src/encode/: async_encode.rs  encoders.rs  folding.rs  mod.rs  normalize.rs  primitives.rs  replacer.rs
src/shared/: constants.rs  literal_utils.rs  mod.rs  string_utils.rs  validation.rs
tests/: cli_conversion.rs  cli_integration.rs  conformance.rs  decode_fixtures.rs  encode_fixtures.rs  json_stream.rs
tests/conformance/: README.md
