[package]
name = "toon_rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "TOON reference implementation in Rust (JSON <-> TOON)"
license = "MIT"
repository = "https://github.com/Dicklesworthstone/toon_rust"
keywords = ["cli", "json", "serialization", "llm", "encoding"]
categories = ["command-line-utilities", "encoding"]

[[bin]]
name = "tr"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Add domain-specific crates as needed

[build-dependencies]
vergen-gix = { version = "9.1", features = ["build", "cargo", "rustc"] }

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
criterion = { version = "0.8", features = ["html_reports"] }
walkdir = "2.4"
insta = { version = "1.38", features = ["json", "yaml"] }
proptest = "1.6"
rand = "0.9.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[features]
default = []
conformance = []

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
