[package]
name = "toon_rust"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
description = "TOON reference implementation in Rust (JSON <-> TOON)"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Dicklesworthstone/toon_rust"
repository = "https://github.com/Dicklesworthstone/toon_rust"
documentation = "https://docs.rs/toon_rust"
keywords = ["cli", "json", "serialization", "llm", "encoding"]
categories = ["command-line-utilities", "encoding"]
exclude = [
    ".beads/",
    ".github/",
    "perf.data",
    "AGENTS.md",
    "EXISTING_TOON_RUST_STRUCTURE.md",
    "PLAN_TO_PORT_TOON_RUST_TO_RUST.md",
    "PROPOSED_ARCHITECTURE.md",
    "tests/golden_outputs/",
    "toon_illustration.webp",
]

[[bin]]
name = "tru"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5.54", features = ["derive", "env"] }
clap_complete = "4.5.65"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.18"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Add domain-specific crates as needed

[build-dependencies]
vergen-gix = { version = "9.1.0", features = ["build", "cargo", "rustc"] }

[dev-dependencies]
tempfile = "3.24.0"
assert_cmd = "2.1.2"
predicates = "3.1.3"
criterion = { version = "0.8.1", features = ["html_reports"] }
walkdir = "2.5.0"
insta = { version = "1.46.1", features = ["json", "yaml"] }
proptest = "1.9.0"
rand = "0.9.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[features]
default = []
conformance = []

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
