[package]
name = "tru"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "TOON reference implementation in Rust (JSON <-> TOON)"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Dicklesworthstone/toon_rust"
repository = "https://github.com/Dicklesworthstone/toon_rust"
documentation = "https://docs.rs/tru"
keywords = ["cli", "json", "serialization", "llm", "encoding"]
categories = ["command-line-utilities", "encoding"]
exclude = [
    ".beads/",
    ".github/",
    "perf.data",
    "AGENTS.md",
    "EXISTING_TOON_RUST_STRUCTURE.md",
    "PLAN_TO_PORT_TOON_RUST_TO_RUST.md",
    "PROPOSED_ARCHITECTURE.md",
    "tests/golden_outputs/",
    "toon_illustration.webp",
    "storage.sqlite3",
]

[lib]
name = "toon"
path = "src/lib.rs"

[[bin]]
name = "toon"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5.60", features = ["derive", "env"] }
clap_complete = "4.5.66"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }

# Error handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async streaming (optional)
asupersync = { version = "0.2.5", optional = true }

# WebAssembly (optional)
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = { version = "0.3", optional = true }

[build-dependencies]
vergen-gix = { version = "9.1.0", features = ["build", "cargo", "rustc"] }

[dev-dependencies]
tempfile = "3.25.0"
assert_cmd = "2.1.2"
predicates = "3.1.4"
criterion = { version = "0.8.2", features = ["html_reports"] }
walkdir = "2.5.0"
insta = { version = "1.46.3", features = ["json", "yaml"] }
proptest = "1.10.0"
rand = "0.10.0"

[[bench]]
name = "toon_benchmark"
harness = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[features]
default = []
conformance = []
# Enable true async streaming using asupersync runtime
async-stream = ["dep:asupersync"]
# Enable WebAssembly bindings
wasm = ["dep:wasm-bindgen", "dep:console_error_panic_hook", "dep:js-sys"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
